dsm news!

# 2.2.11
 * dsm.var.prop uses update() rather than messing around with eval()

# 2.2.10
 * corrected offsets in examples in dsm, dsm.var.prop, dsm.var.movblk
 * updated mexdolphins data with lat/long reversal in prediction data and non-list storage
 * stopped use of rqgam.check from being used with non-negbin/Tweedie responses (thanks to Phil Bouchet for highlighting this issue).

# 2.2.9
 * Moving block bootstrap now works when there is no detection function (suggested by Laura Williamson)
 * Mexico dolphin data has had the areas of the prediction grids and segments re-projected. Thanks to Phil Bouchet for pointing out this error. Context: https://groups.google.com/d/msg/distance-sampling/oj1j8mSmnTc/3cOAAJgBw9MJ


# 2.2.8
 * Speed up and reduced memory usage in variance calculations, thanks to Filipe Dias for asking about this.
 * Better error when no observations are matched to the detection function. Thanks to Ricardo Lima for highlighting this.
 * Check for missing columns had incorrect logic, now corrected and with tests. Thanks to Julia Migné for spotting this.

# 2.2.7
 * Plotting check plots using random quantile residuals (rqgam.check) didn't work for Tweedie or tw family models, now fixed. Thanks to Laura Mannocci and Jason Roberts for pointing this out.
 * Plotting CV used matrix() to coerce data into a data.frame -- thus converting all elements to the simplest type. Errors ensued. Thanks to Adrian Schiavini for finding this bug!

# 2.2.6
 * dsm.var.prop and dsm.var.gam now allow you to supply a single number as an offset, then copy it as many times as you need. Thanks to Filipe Dias for suggesting this.

# 2.2.5
 * dsm.var.prop will now throw an error if there is no detection function in the dsm that it's trying to calculate the variance for (thanks to Adrián Schiavini for finding this)