@@ -95,7 +95,7 @@ print.summary.dsm.var<-function(x,...){
       cat("Coefficient of variation       :", round(x$cv,4),"\n")
     }
   }else{
-    if(x$varprop){
+    if(x$varprop | is.null(x$saved$ddf)){
       cat("Coefficient of variation       :", round(x$cv,4),"\n")
     }else{
       if(!is.null(x$detfct.cv)) cat("CV of detection function       :",x$detfct.cv,"\n")
