@@ -2,6 +2,7 @@ dsm news!
 
 # 2.2.11
  * dsm.var.prop uses update() rather than messing around with eval()
+ * print.summary.dsm.var didn't work for GAM variance when no detection function was specified, now fixed (thanks to Natalia Dellabianca for spotting this)
 
 # 2.2.10
  * corrected offsets in examples in dsm, dsm.var.prop, dsm.var.movblk
